gsm: unmap output buffer when done

https://bugzilla.gnome.org/show_bug.cgi?id=784887